; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/sysdev/extr_mv64x60_pic.c_mv64x60_unmask_low.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/sysdev/extr_mv64x60_pic.c_mv64x60_unmask_low.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@irq_map = common dso_local global %struct.TYPE_2__* null, align 8
@MV64x60_LEVEL2_MASK = common dso_local global i32 0, align 4
@mv64x60_lock = common dso_local global i32 0, align 4
@mv64x60_cached_low_mask = common dso_local global i32 0, align 4
@mv64x60_irq_reg_base = common dso_local global i64 0, align 8
@MV64X60_IC_CPU0_INTR_MASK_LO = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @mv64x60_unmask_low to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mv64x60_unmask_low(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @irq_map, align 8
  %6 = load i32, i32* %2, align 4
  %7 = zext i32 %6 to i64
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i64 %7
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @MV64x60_LEVEL2_MASK, align 4
  %12 = and i32 %10, %11
  store i32 %12, i32* %3, align 4
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @spin_lock_irqsave(i32* @mv64x60_lock, i64 %13)
  %15 = load i32, i32* %3, align 4
  %16 = shl i32 1, %15
  %17 = load i32, i32* @mv64x60_cached_low_mask, align 4
  %18 = or i32 %17, %16
  store i32 %18, i32* @mv64x60_cached_low_mask, align 4
  %19 = load i64, i64* @mv64x60_irq_reg_base, align 8
  %20 = load i64, i64* @MV64X60_IC_CPU0_INTR_MASK_LO, align 8
  %21 = add nsw i64 %19, %20
  %22 = load i32, i32* @mv64x60_cached_low_mask, align 4
  %23 = call i32 @out_le32(i64 %21, i32 %22)
  %24 = load i64, i64* %4, align 8
  %25 = call i32 @spin_unlock_irqrestore(i32* @mv64x60_lock, i64 %24)
  %26 = load i64, i64* @mv64x60_irq_reg_base, align 8
  %27 = load i64, i64* @MV64X60_IC_CPU0_INTR_MASK_LO, align 8
  %28 = add nsw i64 %26, %27
  %29 = call i32 @in_le32(i64 %28)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @out_le32(i64, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @in_le32(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
